--- a/assignment/index.html
+++ b/assignment/index.html
@@ -35,6 +35,7 @@ Here's an example of what the style could look like:
 <head>
   <meta charset="utf-8">
   <title>Unit 5, Part 2 - HTML/CSS Practice</title>
+  <link rel="Stylesheet" href="style.css">
 </head>
 
 <body>
